--- a/CapstonePrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CapstonePrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ TopDownController_C.Default=True
 TopDownController_C.Tick=True
 TopDownController_C.PlayerController=True
 TopDownController_C.MouseInterface=True
-TopDownController_C.Game|Feedback=True
+Feedback=True
 TopDownController_C.Replication=True
 TopDownController_C.Input=True
 TopDownController_C.Actor=True
@@ -107,7 +107,7 @@ StaticMeshActor.Actor=True
 
 [RootWindow]
 ScreenPosition=X=43.000 Y=4.000
-WindowSize=X=1300.000 Y=738.000
+WindowSize=X=1320.000 Y=738.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
